# slid

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SLIDConfig.fla  vcpkg.json  version.rc
.github/workflows/: release.yml
docs/: API.md  Build.md  CHANGELOG.md  ModAuthorGuide.md
include/: APIMessaging.h  ButtonBar.h  ChecklistGrid.h  ConfigState.h  ContainerRegistry.h  ContainerRegistryTest.h  ContainerScanner.h  ContainerUtils.h  ContextResolver.h  Diagnostics.h  DirectionalInput.h  DisplayName.h  Dropdown.h  FilterRegistry.h  IContainerSource.h  IFilter.h  Lifecycle.h  MouseGlow.h  Network.h  NetworkManager.h  PCH.h  RestockCategory.h  SCIEIntegration.h  ScaleformUtil.h  Settings.h  TraitEvaluator.h  TranslationService.h  UIHelper.h  VendorRegistry.h  Version.h
scripts/papyrus/: compile.bat
scripts/papyrus/compiled/: SLID_ConjureMaster.pex  SLID_ContextPower.pex  SLID_Deregister.pex  SLID_Detect.pex  SLID_DismantleNetwork.pex  SLID_LinkContainer.pex  SLID_MCM.pex  SLID_Native.pex  SLID_Reset.pex  SLID_SetMaster.pex  SLID_SetSell.pex  SLID_Tag.pex
scripts/papyrus/source/: SLID_ConjureMaster.psc  SLID_ContextPower.psc  SLID_Deregister.psc  SLID_Detect.psc  SLID_DismantleNetwork.psc  SLID_LinkContainer.psc  SLID_MCM.psc  SLID_Native.psc  SLID_Reset.psc  SLID_SetMaster.psc  SLID_SetSell.psc  SLID_Tag.psc
src/: APIMessaging.cpp  ActionBar.cpp  ActionBar.h  ActivationHook.cpp  ActivationHook.h  ButtonBar.cpp  CatchAllPanel.cpp  CatchAllPanel.h  CellScanContainerSource.cpp  ChecklistGrid.cpp  ConfigState.cpp  ConfirmDialog.cpp  ConfirmDialog.h  ConsoleCommands.cpp  ConsoleCommands.h  ContainerListSource.cpp  ContainerRegistry.cpp  ContainerRegistryTest.cpp  ContainerScanner.cpp  ContextMenu.cpp  ContextMenu.h  ContextResolver.cpp  Diagnostics.cpp  DisplayName.cpp  Distributor.cpp  Distributor.h  Dropdown.cpp  Feedback.cpp  Feedback.h  FilterPanel.cpp  FilterPanel.h  FilterRegistry.cpp  FilterRow.cpp  FilterRow.h  FontTestMenu.cpp  FontTestMenu.h  HoldRemove.cpp  HoldRemove.h  KWFContainerSource.cpp  Lifecycle.cpp  (+34 more)
swf/: SLIDConfig.fla  SLIDConfig.swf
translations/: translations.json
